<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="text_ac">AC</string>
    <string name="text_plus_and_minus">±</string>
    <string name="text_percent">%</string>
    <string name="text_divide">÷</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_multiply">×</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_minus">−</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_plus">+</string>
    <string name="text_0">0</string>
    <string name="text_dot">.</string>
    <string name="text_equal">=</string>
    <string name="text_result_0">0</string>
    <string name="error_divide_by_zero">Could not divide by zero</string>
</resources>
